--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,12 @@
 language: python
 python:
-  - "2.6"
   - "2.7"
   - "3.3"
   - "3.4"
   - "3.5"
 # command to install dependencies
 install:
-  - pip install urllib3==1.22 requests
+  - pip install -r requirements.txt
   - "python setup.py install"
   - pip install mock
   - pip install pytest==3.2.0
